broken layout fixed and made all pages fully responsivness on all devices

--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,8 @@
 @import "tailwindcss";
 @import "tw-animate-css";
 @import "shadcn/tailwind.css";
+
+html,
+body {
+  overflow-x: hidden;
+}
